[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/shop/item_description.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/upgrades/upgrade_ui.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/panel_button_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=5]
[ext_resource path="res://resources/fonts/actual/base/font_menus.tres" type="DynamicFont" id=6]

[node name="UpgradeUI" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -328.0
margin_right = 76.0
margin_bottom = 53.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 356.0
margin_bottom = 376.0
rect_clip_content = true
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 336.0
margin_bottom = 356.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeDescription" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 321.0
margin_bottom = 96.0

[node name="EmptySpace" type="Control" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 111.0
margin_right = 321.0
margin_bottom = 281.0
size_flags_vertical = 3

[node name="ChooseButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 321.0
margin_bottom = 341.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
text = "MENU_CHOOSE"
script = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/ChooseButton" to="." method="_on_ChooseButton_pressed"]
